# Agent-Growth-SaaS

./: .gitattributes  .gitignore  .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  beauty-agent-system-testing.md  python-subproject-in-pnpm-monorepo.md  sqlalchemy-str-enum-pitfalls.md  starlette-jinja2templates-signature.md  virtual-office-agent-synthesis.md
attached_assets/: Pasted--2-Action-Founder-Actio-1783972306656_1783972306657.txt  Pasted--PROMPT-3-Replit-AI-Agent--1783972267998_1783972267999.txt  Pasted--PROMPT-Replit-AI-Agent-AI-Multi-Agent-SaaS-Growth-Supp_1783960384771.txt  Pasted--PROMPT-Replit-AI-Agent-CSC-Virtual-Office-R-1783965312_1783965312216.txt  Pasted-1-CSC-CSC-Customer-Service-Booking-System-SaaS--1783964_1783964927863.txt  Pasted-1-CSC-CSC-Customer-Service-Booking-System-SaaS--1783966_1783966432125.txt  Pasted-6-AI-Chatwoot-What-Why-Virtual-Office-advisory-tool-Fou_1784004119336.txt  Pasted-Webhooks-from-Meta-Webhooks-HTTP--1784048570054_1784048570055.txt
beauty_agent_system/: .env.example  README.md  requirements.txt  run.py
beauty_agent_system/alembic/: env.py
beauty_agent_system/app/: business_context.py  chatwoot_client.py  chatwoot_pipeline.py  config.py  customer_context.py  database.py  facebook_client.py  facebook_dm_pipeline.py  facebook_pipeline.py  llm_client.py  main.py  memory.py  models.py  rate_limiter.py  reply_templates.py  research.py  scheduler.py  tiktok_client.py  tiktok_pipeline.py
beauty_agent_system/scripts/: health_check.sh
beauty_agent_system/tests/: test_rate_limiter.py
(+64 files in other folders)
