[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
